--- a/sass/_embed.scss
+++ b/sass/_embed.scss
@@ -3,7 +3,7 @@ main{
     flex-direction: column;
     height: 100%;
     padding: 36px 0;
-    background-color: #f0a038;
+    background-color: #fff;
     .container{
         display: flex;
         flex-direction: column;
