--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,6 @@
 header{
     padding: 50px 0;
-    background-color: rgb(161, 161, 9);
+    background-color: #fff;
     .title{
         display: flex;
         align-items: center;
