--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 
 header {
   padding: 50px 0;
-  background-color: rgb(161, 161, 9);
+  background-color: #fff;
 }
 header .title {
   display: flex;
@@ -34,7 +34,7 @@ main {
   flex-direction: column;
   height: 100%;
   padding: 36px 0;
-  background-color: #f0a038;
+  background-color: #fff;
 }
 main .container {
   display: flex;
